--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -22,6 +22,7 @@
 @import "node-course";
 @import "node-location";
 @import "user-profile";
+@import "node-brochure";
 
 // views
 @import "view-banners";
