--- a/all/themes/pixelgarage/less/pxlComponents/node-course.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-course.less
@@ -60,9 +60,14 @@
               }
 
               @media @tablet {
-                th, td {
+                th {
                   display: table-cell;
-                  width: 50% !important;
+                  width: 33% !important;
+                  font-size: @font-size-base;
+                }
+                td {
+                  display: table-cell;
+                  width: 67% !important;
                   font-size: @font-size-base;
                 }
               }
