--- a/all/themes/pixelgarage/less/pxlComponents/node-webform.less
+++ b/all/themes/pixelgarage/less/pxlComponents/node-webform.less
@@ -58,7 +58,7 @@
   font-size: @font-size-large;
   line-height: 1;
   letter-spacing: 1.5px;
-  text-transform: capitalize;
+  //text-transform: capitalize;
   color: @color;
   outline: none;
   #pxl-mixins.border-radius(@radius);
