--- a/all/themes/pixelgarage/less/pxlComponents/view-course-tabs.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-course-tabs.less
@@ -61,6 +61,7 @@
 
       .tab-pane {
         .node-course-tabs {
+          padding: 15px;
           .row {
             .col-sm-12 {
               .field-name-body {
