--- a/all/themes/pixelgarage/less/pxlComponents/view-locations.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-locations.less
@@ -127,6 +127,14 @@
               .phone-number {
                 margin-bottom: 10px;
 
+                a {
+                  // mobile add a link
+                  color: #fff;
+                  &:hover, &:focus {
+                    color: #fff;
+                  }
+                }
+
                 span.fa {
                   width: 20px;
                 }
