--- a/all/themes/pixelgarage/less/mixins/box-modifications.less
+++ b/all/themes/pixelgarage/less/mixins/box-modifications.less
@@ -34,6 +34,7 @@
 
   // centers an element horizontally/vertically in its container (block with height)
   .center-horizontally {
+    position: relative;
     left: 50%;
     -webkit-transform: translateX(-50%);
     -ms-transform: translateX(-50%);
