--- a/all/themes/pixelgarage/less/pxlComponents/view-banners.less
+++ b/all/themes/pixelgarage/less/pxlComponents/view-banners.less
@@ -25,6 +25,14 @@
         margin-top: 0;
 
         .item {
+          .views-field-field-picture {
+            position: relative;
+            img {
+              #pxl-mixins.center-horizontally;
+              max-width: 133.333333%;
+              height: auto;
+            }
+          }
 
           &.active {
 
