- proximity module enhanced with isotope layouts - styling added

--- a/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
+++ b/all/themes/pixelgarage/less/pxlComponents/pxlComponents.less
@@ -23,10 +23,14 @@
 @import "node-location";
 @import "user-profile";
 @import "node-brochure";
+@import "node-news";
+@import "node-testimonials";
+@import "node-video";
 
 // views
 @import "view-banners";
 @import "view-call2action";
+@import "view-social-masonry";
 @import "view-segment-pages";
 @import "view-locations";
 @import "view-contacts";
