--- a/all/themes/pixelgarage/less/mixins/transformation.less
+++ b/all/themes/pixelgarage/less/mixins/transformation.less
@@ -15,6 +15,7 @@
   //
   .transition(@transition) {
     -webkit-transition+: @transition;
+    -moz-transition+: @transition;
     -o-transition+: @transition;
     transition+: @transition;
   }
